--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -122,7 +122,6 @@ deny 109.199.101.106;
 deny 109.199.101.134;
 deny 109.199.105.142;
 deny 109.228.160.190;
-deny 109.248.11.6;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -696,6 +695,7 @@ deny 194.163.157.49;
 deny 194.26.192.249;
 deny 194.26.192.77;
 deny 194.53.137.156;
+deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.26.247.64;
@@ -717,7 +717,7 @@ deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.144.178.185;
 deny 198.144.178.187;
-deny 198.167.206.157;
+deny 198.167.206.152;
 deny 198.251.84.163;
 deny 198.251.84.237;
 deny 198.251.88.18;
@@ -1012,6 +1012,7 @@ deny 23.153.248.34;
 deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
+deny 23.154.177.13;
 deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
@@ -1299,7 +1300,6 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe64:90e3;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -1625,7 +1625,6 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
-deny 2a0d:c580:1:3:95::1;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1682,6 +1681,7 @@ deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
 deny 2a12:a800:1:1:2:58:56:233;
@@ -1735,7 +1735,6 @@ deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.44.238.25;
 deny 35.0.127.52;
-deny 35.221.131.248;
 deny 37.120.239.59;
 deny 37.187.5.192;
 deny 37.187.56.239;
@@ -1843,7 +1842,6 @@ deny 45.95.169.16;
 deny 45.95.169.230;
 deny 45.95.169.24;
 deny 45.95.169.255;
-deny 46.182.21.248;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
