--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -122,7 +122,6 @@ set_real_ip_from 109.199.101.106;
 set_real_ip_from 109.199.101.134;
 set_real_ip_from 109.199.105.142;
 set_real_ip_from 109.228.160.190;
-set_real_ip_from 109.248.11.6;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
 set_real_ip_from 109.70.100.2;
@@ -696,6 +695,7 @@ set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.26.192.249;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.53.137.156;
+set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.26.247.64;
@@ -717,7 +717,7 @@ set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.144.178.185;
 set_real_ip_from 198.144.178.187;
-set_real_ip_from 198.167.206.157;
+set_real_ip_from 198.167.206.152;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -1012,6 +1012,7 @@ set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
+set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
@@ -1299,7 +1300,6 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe64:90e3;
 set_real_ip_from 2a02:16d0:0:5::1;
-set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1625,7 +1625,6 @@ set_real_ip_from 2a0d:bbc7:0:1::3cc;
 set_real_ip_from 2a0d:bbc7:0:1::3d5;
 set_real_ip_from 2a0d:bbc7:0:1::7f;
 set_real_ip_from 2a0d:c2c0:1:4::2;
-set_real_ip_from 2a0d:c580:1:3:95::1;
 set_real_ip_from 2a0e:1d80:13:51e8::1;
 set_real_ip_from 2a0e:1d80:17:6f8d::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1682,6 +1681,7 @@ set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:1:1:194:26:192:77;
 set_real_ip_from 2a12:a800:1:1:2:58:56:220;
 set_real_ip_from 2a12:a800:1:1:2:58:56:233;
@@ -1735,7 +1735,6 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
-set_real_ip_from 35.221.131.248;
 set_real_ip_from 37.120.239.59;
 set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.187.56.239;
@@ -1843,7 +1842,6 @@ set_real_ip_from 45.95.169.16;
 set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.24;
 set_real_ip_from 45.95.169.255;
-set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
