--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -675,11 +675,16 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
+allow 193.218.118.133;
+allow 193.218.118.153;
+allow 193.218.118.157;
 allow 193.218.118.160;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
 allow 193.218.118.188;
+allow 193.218.118.56;
+allow 193.218.118.72;
 allow 193.218.118.89;
 allow 193.237.221.228;
 allow 193.239.232.102;
@@ -997,7 +1002,6 @@ allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.199.199.250;
-allow 221.191.130.37;
 allow 23.133.204.10;
 allow 23.137.248.100;
 allow 23.137.248.192;
@@ -1674,10 +1678,15 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
+allow 2a0f:e586:f:f:8605:d341:b954:fc51;
+allow 2a0f:e586:f:f:9405:a52b:796f:aff2;
+allow 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
+allow 2a0f:e586:f:f:a060:ebda:49aa:b011;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
+allow 2a0f:e586:f:f:e356:1bda:fc05:6784;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1907,6 +1916,7 @@ allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
 allow 57.128.164.66;
+allow 60.39.117.185;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
