--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -675,11 +675,16 @@ deny 193.189.100.203;
 deny 193.189.100.204;
 deny 193.189.100.205;
 deny 193.189.100.206;
+deny 193.218.118.133;
+deny 193.218.118.153;
+deny 193.218.118.157;
 deny 193.218.118.160;
 deny 193.218.118.173;
 deny 193.218.118.178;
 deny 193.218.118.182;
 deny 193.218.118.188;
+deny 193.218.118.56;
+deny 193.218.118.72;
 deny 193.218.118.89;
 deny 193.237.221.228;
 deny 193.239.232.102;
@@ -997,7 +1002,6 @@ deny 216.73.159.101;
 deny 216.73.159.75;
 deny 217.12.221.131;
 deny 217.199.199.250;
-deny 221.191.130.37;
 deny 23.133.204.10;
 deny 23.137.248.100;
 deny 23.137.248.192;
@@ -1674,10 +1678,15 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
+deny 2a0f:e586:f:f:8605:d341:b954:fc51;
+deny 2a0f:e586:f:f:9405:a52b:796f:aff2;
+deny 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
+deny 2a0f:e586:f:f:a060:ebda:49aa:b011;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
+deny 2a0f:e586:f:f:e356:1bda:fc05:6784;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1907,6 +1916,7 @@ deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
 deny 57.128.164.66;
+deny 60.39.117.185;
 deny 62.133.45.2;
 deny 62.171.137.169;
 deny 62.182.84.146;
