--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -122,6 +122,7 @@ deny 109.199.101.106;
 deny 109.199.101.134;
 deny 109.199.105.142;
 deny 109.228.160.190;
+deny 109.248.11.6;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -1281,7 +1282,6 @@ deny 2800:ba0:6:c1::4858;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
-deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -1365,7 +1365,6 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:98a3::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -1615,6 +1614,7 @@ deny 2a0c:e300::23;
 deny 2a0d:2787:1b:d19::a;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1629,6 +1629,7 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0d:c580:1:3:95::1;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1768,6 +1769,7 @@ deny 45.130.60.248;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.137.99.10;
+deny 45.137.99.14;
 deny 45.137.99.216;
 deny 45.138.16.107;
 deny 45.138.16.113;
@@ -1848,7 +1850,6 @@ deny 45.9.168.22;
 deny 45.94.31.68;
 deny 45.95.169.130;
 deny 45.95.169.16;
-deny 45.95.169.230;
 deny 45.95.169.24;
 deny 45.95.169.255;
 deny 46.23.109.25;
@@ -1882,7 +1883,6 @@ deny 5.181.80.107;
 deny 51.89.136.168;
 deny 51.91.18.151;
 deny 5.196.95.34;
-deny 5.255.100.219;
 deny 5.255.100.227;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1961,6 +1961,7 @@ deny 82.221.139.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.77;
+deny 84.16.224.227;
 deny 84.211.226.13;
 deny 84.239.46.144;
 deny 84.247.183.128;
@@ -1976,7 +1977,6 @@ deny 87.118.116.12;
 deny 87.118.116.90;
 deny 87.118.122.30;
 deny 87.118.122.51;
-deny 87.120.254.132;
 deny 88.151.117.146;
 deny 88.80.20.86;
 deny 88.80.26.2;
