--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -122,7 +122,6 @@ allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
 allow 109.228.160.190;
-allow 109.248.11.6;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -149,7 +148,6 @@ allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
-allow 135.225.96.187;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.180.160.15;
@@ -256,7 +254,6 @@ allow 176.65.143.138;
 allow 176.65.144.142;
 allow 176.65.144.94;
 allow 176.97.114.202;
-allow 177.149.149.2;
 allow 178.162.175.5;
 allow 178.162.197.91;
 allow 178.17.170.144;
@@ -663,6 +660,7 @@ allow 192.42.116.28;
 allow 192.99.149.111;
 allow 193.105.134.150;
 allow 193.105.134.155;
+allow 193.107.109.16;
 allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
@@ -1007,6 +1005,7 @@ allow 23.133.204.10;
 allow 23.137.248.100;
 allow 23.137.248.192;
 allow 23.137.250.83;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.137;
@@ -1090,6 +1089,7 @@ allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fef9:100:1100::199;
@@ -1613,7 +1613,6 @@ allow 2a0c:e300::23;
 allow 2a0d:2787:1b:d19::a;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1628,7 +1627,6 @@ allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
-allow 2a0d:c580:1:3:95::1;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1652,7 +1650,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:424c::1;
-allow 2a0f:85c1:356:5bdd::beef;
 allow 2a0f:ca80:1337::47f8:fb5;
 allow 2a0f:ca80:1337::5071:cafb;
 allow 2a0f:ca80:1337::64fa:7d6b;
@@ -1768,7 +1765,6 @@ allow 45.130.60.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.99.10;
-allow 45.137.99.14;
 allow 45.137.99.216;
 allow 45.138.16.107;
 allow 45.138.16.113;
@@ -1925,7 +1921,6 @@ allow 64.176.39.158;
 allow 64.190.76.2;
 allow 64.190.76.3;
 allow 64.190.76.4;
-allow 65.87.7.22;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
@@ -1962,7 +1957,6 @@ allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
-allow 84.211.226.13;
 allow 84.239.46.144;
 allow 84.247.183.128;
 allow 84.252.120.131;
