--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -142,6 +142,7 @@ allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fef9:100:1100::199;
@@ -664,7 +665,6 @@ allow 2a0c:e300::23;
 allow 2a0d:2787:1b:d19::a;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -679,7 +679,6 @@ allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
-allow 2a0d:c580:1:3:95::1;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
@@ -703,7 +702,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:424c::1;
-allow 2a0f:85c1:356:5bdd::beef;
 allow 2a0f:ca80:1337::47f8:fb5;
 allow 2a0f:ca80:1337::5071:cafb;
 allow 2a0f:ca80:1337::64fa:7d6b;
